--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,14 @@ pymupdf>=1.23.0
 python-docx>=1.0.1
 sentence-transformers>=2.2.2
 faiss-cpu>=1.7.4
+google-generativeai>=0.3.0
+PyPDF2>=3.0.1
+pdfminer.six>=20221105
+scikit-learn>=1.3.0
+numpy>=1.24.0
+pandas>=2.0.0
+tqdm>=4.65.0
+requests>=2.31.0
+openai>=1.0.0
+transformers>=4.35.0
+torch>=2.0.0
